docroot/includes/deed3.css
/* ... */
.js #deed-donate-slide { display: none; }
.js #deed-donate-slide.reveal { display: block; }
#deed-donate-slide {
	width: 90%;
	margin: 0 auto;
	line-height: 17px;
	text-align: center;
	color: #fff;
}
#deed-donate-slide.slider {
	width: 340px;
	margin: 0 auto 0 -280px;
	position: absolute;
	left: 0;
	top: 45px;
	z-index: 1000;
	display: table;
	-moz-box-shadow:    1px 2px 6px rgba(0,0,0,.3);
	-webkit-box-shadow: 1px 2px 6px rgba(0,0,0,.3);
	box-shadow:         1px 2px 6px rgba(0,0,0,.3);
	-webkit-transition: margin .3s ease-in-out;
	-moz-transition:    margin .3s ease-in-out;
	-o-transition:      margin .3s ease-in-out;
	-ms-transition:    margin .3s ease-in-out;
	transition:         margin .3s ease-in-out;
}
#deed-donate-slide.slider.reveal { margin-left: calc(50% - 700px); }

#deed-donate-slide .manual-wrap { white-space: pre; }

/* -- Yellow Ribbon -- */
#deed-donate-slide .yellow-ribbon {
  background-color: #FEEB32;
  box-shadow: 0px 6px 5px -2px rgba(0, 0, 0, 0.5);
  box-sizing: border-box;
  color: #000;
  font-weight: 600;
  height: 62px;
  line-height: 1.3em;
  margin: 20px auto 10px auto;
  padding: 10px 0px;
  position: relative;
  width: 80%;
}

#deed-donate-slide .yellow-ribbon::before,
#deed-donate-slide .yellow-ribbon::after {
  border: 31px solid #FEEB32;
  content: '';
  display: block;
  position: absolute;
  top: 0;
  z-index: 1;
}

#deed-donate-slide .yellow-ribbon::before {
  border-left-color: transparent;
  left: -35px;
}

#deed-donate-slide .yellow-ribbon::after {
  border-right-color: transparent;
  right: -35px;
}

#deed-donate-slide .yellow-ribbon span {
  position: relative;
  z-index: 2;
}

@media screen and (min-width: 480px) and (max-width: 1220px) {
	#deed-donate-slide .yellow-ribbon {
	  font-size: 18px;
	  padding: 10px 5%;
	}
}

@media screen and (min-width: 620px) and (max-width: 1220px) {

  #deed-donate-slide .yellow-ribbon { padding: 18px 0px; }
}

@media screen and (min-width: 48.9375em) and (max-width: 1220px) { /* $table-md-layout */

  #deed-donate-slide .yellow-ribbon {
  	font-size: 20px;
  	margin-bottom: 30px;
    padding: 18px 0px;
   }

  #deed-donate-slide .yellow-ribbon::before {
    left: auto;
    right: 100%;
  }

  #deed-donate-slide .yellow-ribbon::after {
    left: 100%;
    right: auto;
  }
}

@media screen and (min-width: 56.875em) and (max-width: 1220px) { /* $desktop-sm-layout */

  #deed-donate-slide .yellow-ribbon {
  	font-size: 22px;
    margin-bottom: 40px;
  }
}

@media screen and (min-width: 75em) and (max-width: 1220px) { /* $desktop-lg-layout */

  #deed-donate-slide .yellow-ribbon { font-size: 24px; }
}
/* -- End of: Yellow Ribbon -- */

/* -- Donate form: title -- */
.donate-box h2 {
  align-items: center;
  color: #000;
  display: block;
  font-size: 26px;
  font-weight: 700;
  line-height: 1em;
  margin: 0px;
  min-height: 60px;
  text-align: center;
}

.donate-box h2 .share-wins { display: block; }

.donate-box h2 .contribute-today {
  display: block;
  font-size: 0.7em;
  line-height: 1.1em;
  margin-top: 0.5em;
}

@media screen and (min-width: 620px) and (max-width: 1220px) {

  .donate-box h2 {
    background: url('cc_heart.png') 6% center no-repeat;
    background-size: 66px;
    padding-left: 18%;
    padding-top: 5px;
    text-align: left;
  }
}

@media screen and (min-width: 44.375em) and (max-width: 1220px) { /* $tablet-sm-layout */

  .donate-box h2 {
  	background-position: 16% center;
  	padding-left: 26%;
  }
}

@media screen and (min-width: 75em) and (max-width: 1220px) { /* $desktop-lg-layout */

  /*.donate-box h2 .contribute-today { display: none; }*/

  .donate-box h2 {
    background-image: none;
    font-size: 44px;
    min-height: auto;
    padding-left: 0;
  }

  .donate-box h2 .share-wins { display: none; }
}
/* -- End of: Donate form: title -- */

#deed-donate-slide .no-wrap { white-space: nowrap; }

.donate-box .gform_fields { margin-top: 0; }

.slide-close {
	background: url('../images/deed/slide-close.png') no-repeat center center;
	width: 16px;
	height: 17px;
	display: block;
	cursor: pointer;
	position: absolute;
	right: 5px;
	top: 5px;
	opacity: .6;
	text-indent: -99999px;
	z-index: 999; }
.slide-close:hover { opacity: 1; }

.slide-tab { display: none; }

/* --- Message --- */
.slide-trigger {
	display: block;
	background-color: #158B95;
	padding: 15px;
	-webkit-transition: all .3s ease-in-out;
	-moz-transition:    all .3s ease-in-out;
	-o-transition:      all .3s ease-in-out;
	-ms-transition:     all .3s ease-in-out;
	transition:         all .3s ease-in-out;
}

.slide-trigger img.cc-logo {
  display: block;
  left: -25%;
  margin: 0 auto -5% auto;
  max-width: 150%;
  position: relative;
  top: -10%;
}

@media screen and (min-width: 56.875em) and (max-width: 1220px) { /* $desktop-sm-layout */

  .slide-trigger img.cc-logo {
  	left: 0;
    margin-bottom: 0;
    max-width: 100%;
   }
}

.slide-trigger p {
	margin: 0;
	font-weight: 600;
	cursor: pointer;
}

.slide-trigger button {
	background: rgba(70,34,18,.3);
	display:inline-block;
	padding: .5em 1em;
	border: 0;
	-webkit-border-radius: 5px 5px 5px 5px;
	border-radius: 5px 5px 5px 5px;
	-webkit-box-shadow:inset 2px 2px 6px 0 rgba(0,0,0,.2);
	box-shadow:inset 2px 2px 6px 0 rgba(0,0,0,.2);
	color: #fff;
	font-size: 20px;
	/*font-weight: bold;*/
	margin: 15px 0 0;
	text-decoration: none;
	cursor: pointer;
	-webkit-transition: all .3s ease-in-out;
	-moz-transition: all .3s ease-in-out;
	-ms-transition: all .3s ease-in-out;
	-o-transition: all .3s ease-in-out;
	transition: all .3s ease-in-out;
}
.slide-trigger button:hover {
	background: rgba(70,34,18,.6);
}

img.slide-logo { padding-top: 40px; }

/* Donate box */

.donate-box {
  margin-bottom: 30px;
  position: relative;
}

.donate-box .gform_wrapper { margin: 0; }

.donate-box .widget-inner {
  margin-left: 10px;
  margin-right: 10px;
  background: #F3F3F3;
  border-top: 10px solid #01A635;
  padding: 20px;
  position: relative;
}
/* ... */

